# sulfone.iridium

./: .coderabbit.yaml  .envrc  .gitignore  .goreleaser.yaml  .infisical.json  Cargo.toml  Changelog.md  Changelog.old.md  Dockerfile  LLM.MD  README.MD  Taskfile.yaml  atomi_release.yaml  cyan.proc.yaml  cyan.temp.yaml  flake.nix  goreleaser.go  treefmt.toml
.claude/skills/: e2e-test.md
.github/: dependabot.yml
.github/workflows/: cache.yaml  cd.yaml  ci.yaml  release.yaml  ⚡reusable-build.yaml  ⚡reusable-cacheshell.yaml  ⚡reusable-cd.yaml  ⚡reusable-precommit.yaml  ⚡reusable-release.yaml  🛡️merge-gatekeeper.yml
cyancoordinator/: Cargo.toml
cyancoordinator/src/: client.rs  errors.rs  fs.rs  lib.rs  macros.rs
cyancoordinator/src/cache/: key.rs  mod.rs  store.rs
cyancoordinator/src/conflict_file_resolver/: consensus.rs  mod.rs  models.rs  registry.rs
cyancoordinator/src/fs/: loader.rs  merger.rs  mod.rs  traits.rs  unpacker.rs  vfs.rs  writer.rs
cyancoordinator/src/models/: mod.rs  req.rs  res.rs
cyancoordinator/src/operations/: mod.rs  new_template.rs  rerun.rs  upgrade.rs
cyancoordinator/src/operations/composition/: cache_test.rs  layerer.rs  mod.rs  operator.rs  resolver.rs  state.rs  test.rs
cyancoordinator/src/session/: generator.rs  mod.rs  test.rs
cyancoordinator/src/state/: mod.rs  models.rs  services.rs  traits.rs
cyancoordinator/src/template/: executor.rs  history.rs  mod.rs
cyanprint/: Cargo.toml  LLM.MD
cyanprint/src/: command_executor.rs  commands.rs  coord.rs  errors.rs  fs.rs  git.rs  headless.rs  main.rs  port.rs  run.rs  run_composition.rs  session.rs  template.rs  template_history.rs  try_cmd.rs  update.rs  update_composition.rs  util.rs
cyanprint/src/docker/: buildx.rs  mod.rs
cyanprint/src/state/: models.rs  services.rs  traits.rs
cyanprint/src/test_cmd/: config.rs  container.rs  init.rs  mod.rs  plugin.rs  processor.rs  report.rs  resolver.rs  semaphore.rs  template.rs  validation.rs
cyanprint/src/update/: batch_processor.rs  operator_factory.rs  orchestrator.rs  spec.rs  template_processor.rs  upgrade_executor.rs  utils.rs  version_manager.rs
cyanprompt/: Cargo.toml  LLM.MD
cyanprompt/src/: lib.rs
cyanprompt/src/domain/: mod.rs
cyanprompt/src/domain/models/: answer.rs  cyan.rs  headless.rs  mod.rs  prompt.rs  question.rs
cyanprompt/src/domain/models/extension/: input.rs  output.rs
cyanprompt/src/domain/models/template/: input.rs  mod.rs  output.rs
cyanprompt/src/domain/services/: mod.rs  prompter.rs  repo.rs
cyanprompt/src/domain/services/extension/: engine.rs  states.rs  validate.rs
cyanprompt/src/domain/services/template/: engine.rs  mod.rs  redact.rs  states.rs  validate.rs
cyanprompt/src/http/: client.rs  mapper.rs  mod.rs
cyanprompt/src/http/core/: answer_req.rs  answer_res.rs  cyan_req.rs  cyan_res.rs  mod.rs  question_res.rs
cyanprompt/src/http/extension/: mapper.rs  mod.rs  req_model.rs  res_model.rs
cyanprompt/src/http/template/: mapper.rs  mod.rs  req_model.rs  res_model.rs
cyanregistry/: Cargo.toml  LLM.MD
cyanregistry/src/: lib.rs
cyanregistry/src/cli/: env_subst.rs  mapper.rs  mod.rs
cyanregistry/src/cli/models/: build_config.rs  dev_config.rs  mod.rs  plugin_config.rs  processor_config.rs  resolver_config.rs  resolver_ref_config.rs  template_config.rs
cyanregistry/src/domain/config/: mod.rs  plugin_config.rs  processor_config.rs  resolver_config.rs  resolver_ref_config.rs  template_config.rs
cyanregistry/src/http/: client.rs  errors.rs  mapper.rs  mod.rs
cyanregistry/src/http/models/: mod.rs  plugin_req.rs  plugin_res.rs  processor_req.rs  processor_res.rs  resolver_ref_req.rs  resolver_req.rs  resolver_res.rs  template_req.rs  template_res.rs
docs/developer/: 00-README.md  01-getting-started.md  02-architecture.md  ARCHITECTURE_VERIFICATION_REPORT.md  CONCEPTS_VERIFICATION_REPORT.md  FILE_REFERENCE_REPORT.md  MAIN_DOCS_DETAILED_VERIFICATION_REPORT.md  MAIN_DOCS_VERIFICATION_REPORT.md  MODULES_VERIFICATION_REPORT.md
e2e/: build.sh  e2e.sh  full.sh  generate-snapshots.sh  local.sh  publish-group.sh  publish-plugin.sh  publish-processor.sh  publish-resolver.sh  publish-template.sh  run-interactive.sh  setup.sh
e2e/expect/: create-group-template4.exp  create-template10.exp  create-template2.exp  create-template8.exp  test-init-template5.exp  try-template10.exp  try-template2.exp  try-template5.exp  try-template9.exp
e2e/plugin1/: .gitignore  README.MD  bun.lockb  cyan.yaml  index.ts  package.json
e2e/plugin2/: README.MD  cyan.yaml  index.ts  test.cyan.yaml
e2e/processor1/: README.MD  bun.lockb  cyan.yaml  index.ts  package.json
e2e/processor2/: README.MD  cyan.yaml  (+1 more)
nix/: default.nix  env.nix  fmt.nix  packages.nix  pre-commit.nix  shells.nix
scripts/: backup-changelog.sh  build.sh  bump-cargo.sh  bump-nix.sh  bump.sh  fury.sh  goreleaser-shim.sh  pre-commit.sh  publish.sh  release.sh
(+291 files in other folders)
