[package]
name = "cyancoordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cyanprompt = { path = "../cyanprompt" }
cyanregistry = { path = "../cyanregistry"}
tar = "0.4"
flate2 = "1.1"
reqwest = { version = "0.12", features = ["json", "blocking", "native-tls-vendored"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["unstable-locales"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
