[package]
name = "cyanprint"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cyanprompt = { path = "../cyanprompt" }
cyanregistry = { path = "../cyanregistry"}
cyancoordinator = { path = "../cyancoordinator"}
bollard = "*"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking", "native-tls-vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
chrono = { version = "0.4", features = ["unstable-locales", "serde"] }
clap = { version = "4.5.37", features = ["derive", "env"] }
futures = "0.3.31"
rand = "0.9.1"
uuid = { version = "1.16.0", features = ["v4"] }
futures-util = "0.3.31"
inquire = "0.6.2"
